--- a/styles.css
+++ b/styles.css
@@ -2,16 +2,33 @@ html{
   width: 1366px;
   height: 768px;
   background-color: #494949;
-  background-image: url('image/portal.png');
-  background-repeat: no-repeat;
-  background-size: cover;
 
+
+}
+#bg {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+z-index: -1;
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 #mySketch {
     width: 800px;
     height: 250px;
+    padding: 20px;
+    color: white;
     border: 3px solid black;
     margin: 15px auto;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 120px;
+
 
 
 }
@@ -19,7 +36,7 @@ h1{
   text-align: right;
 
   font-size: 4.5vw;
-  font-family: 'Coiny', cursive;
+  font-family: 'Source Code Pro', monospace;
   margin-right: 5px;
   margin-bottom: .5px;
   color:#05D627;
