--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,54 @@ z-index: -1;
     height: 250px;
     padding: 20px;
     color: white;
-    border: 3px solid black;
+    border-radius: 25px;
+    border: 0px solid;
     margin: 15px auto;
     font-family: 'Source Code Pro', monospace;
-    font-size: 120px;
-
+    font-size: 100px;
+    box-shadow: 5px 10px 18px black;
+    text-align: center;
 
 
 }
+#mySketch:hover {
+    background-color: #1C1C1C;
+    opacity: 50%;
+    transition: all 2s ease-in;
+    animation:colorchange 32s infinite alternate;
+
+
+}
+@-webkit-keyframes colorchange {
+      0% {
+        
+        color: blue;
+      }
+      
+      10% {
+        
+        color: #8e44ad;
+      }
+      
+      40% {
+        
+        color: blue;
+      }    
+      70% {
+        
+        color: #2980b9;
+      }
+      80% {
+     
+        color: #f1c40f;
+      }
+
+      
+      100% {
+        
+        color: pink;
+      }
+    }
 h1{
   text-align: right;
 
@@ -73,7 +113,7 @@ h2{
 }
 h3{
   font-size: 1.28em;
-  color: #05D627;
+  color: floralwhite;
   vertical-align: 75px;
   padding-left: 5px;
 
