--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
 html{
-  width: 1366px;
+  width: auto;
   height: 768px;
   background-color: #494949;
-
-
 }
+
 #bg {
   /* Set rules to fill background */
   min-height: 100%;
@@ -28,10 +27,9 @@ z-index: -1;
     border: 0px solid;
     margin: 15px auto;
     font-family: 'Source Code Pro', monospace;
-    font-size: 100px;
+    font-size: 90px;
     box-shadow: 5px 10px 18px black;
     text-align: center;
-
 
 }
 #mySketch:hover {
@@ -45,31 +43,42 @@ z-index: -1;
 @-webkit-keyframes colorchange {
       0% {
         
-        color: blue;
+        color: lightblue;
       }
       
       10% {
         
         color: #8e44ad;
       }
+    20% {
+        
+        color: yellowgreen;
+      }
+    
+    30%{
+        color:green;
+    }
       
       40% {
         
         color: blue;
-      }    
+      } 
+    60{
+        color:crimson
+    }
       70% {
         
-        color: #2980b9;
+        color: orange;
       }
       80% {
      
-        color: #f1c40f;
+        color: fuchsia;
       }
 
       
       100% {
         
-        color: pink;
+        color: white;
       }
     }
 h1{
@@ -138,7 +147,7 @@ footer{
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #005612;
+  background-color: black;
   color: white;
   text-align: center;
 }
