--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ z-index: -1;
 #mySketch:hover {
     background-color: #1C1C1C;
     opacity: 50%;
-    transition: all 2s ease-in;
+    padding-top: 40px;
+    transition: all 1.5s ease-in;
     animation:colorchange 32s infinite alternate;
 
 
