--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html{
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
-z-index: -1;
+  z-index: -1;
   /* Set up proportionate scaling */
   width: 100%;
   height: auto;
@@ -85,11 +85,11 @@ z-index: -1;
 h1{
   text-align: right;
 
-  font-size: 4.5vw;
+  font-size: 4vw;
   font-family: 'Source Code Pro', monospace;
   margin-right: 5px;
   margin-bottom: .5px;
-  color:#05D627;
+  color:white;
 
 }
 
