--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,20 @@ html{
   height: 768px;
   background-color: #494949;
 }
+article{
+  border-radius: 25px;
+  border: 0px solid;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  margin:0 auto;
+  text-align: center;
+ width: 950px;
+    height: auto;
+}
 
+p {
+    color: white;
+}
 #bg {
   /* Set rules to fill background */
   min-height: 100%;
@@ -11,12 +24,18 @@ html{
   z-index: -1;
   /* Set up proportionate scaling */
   width: 100%;
-  height: auto;
+  height: 100%;
 	
   /* Set up positioning */
   position: fixed;
   top: 0;
   left: 0;
+}
+#imgPic{
+    margin:0 auto;
+    width: 500px;
+    height: auto;
+    display: inline;
 }
 #mySketch {
     width: 800px;
@@ -144,11 +163,12 @@ a:hover{
 }
 footer{
   padding: 15px;
-  position: fixed;
+  position: sticky;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: black;
   color: white;
   text-align: center;
+margin: 20px 0px 0px 0px;
 }
