--- a/studio1/style.css
+++ b/studio1/style.css
@@ -5,19 +5,34 @@ html{
 }
 h2{
     font-family: 'Source Code Pro', monospace;
-    font-size:2vm;
+    font-size:2vw;
     text-align: center;
+    color: white;
+    border: 0px solid;
+    border-color: limegreen;
+    border-width:thin;
+    border-left: 0px;
+    border-right: 0px;
+    padding: 5px;
 }
 
 
 p {
+    font-size:150%;
     color: white;
+    text-align: center;
 }
 
-img{
+#myImg{
     position: absolute;
     width: 35%;
-    left: 48%;
+    left: 46%;
+}
+#myImg2{
+    position: absolute;
+    width: 30%;
+    left: 35%;
+
 }
 
 fieldset {
@@ -89,8 +104,47 @@ section {
     border-radius: 25px;
     border-color: limegreen;
     border-width: thick;
-    height: 91%;
     padding: 20px;
+    display: none;
+    width: 60%;
+    height: 575px;
+    padding: 20px;
+    margin: 15px auto;
+    font-family: 'Source Code Pro', monospace;
+    font-size: .80em;
+    box-shadow: 5px 10px 18px black;
+    background-color: rgb(28,28,28,.75);                                                                      
+
+}
+
+#myProgress {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#myBar {
+  width: 1%;
+  height: 30px;
+  background-color: #4CAF50;
+  animation:progressbar 60s linear;
+}
+
+@keyframes progressbar {
+0% {width:0%;background-position:top left;}
+100% {width:100%;background-position:bottom right;}
+}
+
+@keyframes complete {
+0% {visibility:hidden;}
+1%, 100% {height:1000px;visibility:visible;}
+}
+
+section > section {
+    border-color: limegreen;
+    width: 85%;
+    height: 87%;
+    display: none;
+
 }
 article {
     width: 60%;
@@ -105,9 +159,8 @@ article {
     box-shadow: 5px 10px 18px black;
     text-align: left;
     background-color: rgb(28,28,28,.75);
-    
+    display:block;
 }
-
 
 h1{
   text-align: right;
