--- a/studio2/styles.css
+++ b/studio2/styles.css
@@ -3,165 +3,45 @@ html{
   height: 768px;
   background-color: #494949;
 }
-article{
-  border-radius: 25px;
-  border: 0px solid;
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 20px;
-  margin:0 auto;
-  text-align: center;
-  width: 950px;
-  height: auto;
-}
+
 
 p {
     color: white;
 }
+svg { height:100% }
 #bg {
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
-  z-index: -1;
+  z-index: -2;
   /* Set up proportionate scaling */
   width: 100%;
-  height: 100%;
-	
+  height: 100%;	
   /* Set up positioning */
   position: fixed;
   top: 0;
   left: 0;
 }
-#imgPic{
-    margin:0 auto;
-    width: 500px;
-    height: auto;
-    display: inline;
-}
-#mySketch {
-    width: 800px;
-    height: 250px;
-    padding: 20px;
-    color: white;
-    border-radius: 25px;
+
+.items {
     border: 0px solid;
-    margin: 15px auto;
+    border-radius: 25px;
+    border-width: thick;
+    padding: 20px;
+    display: none;
+    width: 60%;
+    height: 575px;
+    padding: 20px;
+    margin: 30px auto;
     font-family: 'Source Code Pro', monospace;
-    font-size: 90px;
+    font-size: .80em;
     box-shadow: 5px 10px 18px black;
+    background-color: rgb(0,35,15,.60);  
     text-align: center;
-
-}
-#mySketch:hover {
-    background-color: #1C1C1C;
-    opacity: 50%;
-    padding-top: 40px;
-    transition: all 1.5s ease-in;
-    animation:colorchange 32s infinite alternate;
-
-
-}
-@-webkit-keyframes colorchange {
-      0% {
-        
-        color: lightblue;
-      }
-      
-      10% {
-        
-        color: #8e44ad;
-      }
-    20% {
-        
-        color: yellowgreen;
-      }
     
-    30%{
-        color:green;
-    }
-      
-      40% {
-        
-        color: blue;
-      } 
-    60{
-        color:crimson
-    }
-      70% {
-        
-        color: orange;
-      }
-      80% {
-     
-        color: fuchsia;
-      }
-
-      
-      100% {
-        
-        color: white;
-      }
-    }
-h1{
-  text-align: right;
-
-  font-size: 4vw;
-  font-family: 'Source Code Pro', monospace;
-  margin-right: 5px;
-  margin-bottom: .5px;
-  color:white;
 
 }
 
-section {
-
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 10px;
-  width: 900px;
-  height: 450px;
-  margin: 0 auto;
-  grid-column-gap: 10px;
-
-}
-
-section > section {
-  width: 230px;
-  margin: 0 auto;
-  border-radius: 25px;
-  border: 0px solid;
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 7px;
-  overflow: hidden;
-
-  line-height: 1;
-}
-h2{
-  position: absolute;
-  color: white;
-  font-size: 12pt;
-}
-h3{
-  font-size: 1.28em;
-  color: floralwhite;
-  vertical-align: 75px;
-  padding-left: 5px;
-
-}
-section li{
-  font-size: .85em;
-  width: 50px;
-  color: white;
-  margin-bottom: 10px;
-}
-
-a{
-  color: white;
-  text-decoration: none;
-}
-a:hover{
-  color: #00B233;
-  text-decoration: none;
-}
 footer{
   padding: 15px;
   position: fixed;
@@ -173,3 +53,19 @@ footer{
   text-align: center;
 margin: 20px 0px 0px 0px;
 }
+
+#backpack {
+   margin: 10% 40%;
+   display:none;
+}
+
+#item1 {
+    display:block;
+}
+#item2 {
+    display:none;
+}
+#item3 {
+    display:none;
+}
+
