even more responsive

--- a/studio2/styles.css
+++ b/studio2/styles.css
@@ -9,7 +9,7 @@ p {
     color: white;
 }
 svg { height:100% }
-#bg {
+#bg1 {
   /* Set rules to fill background */
   min-height: 100%;
   min-width: 1024px;
@@ -21,6 +21,21 @@ svg { height:100% }
   position: fixed;
   top: 0;
   left: 0;
+  display: none;
+}
+#bg2 {
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+  z-index: -2;
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: 100%;	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: block;
 }
 
 
@@ -56,8 +71,25 @@ footer{
 margin: 20px 0px 0px 0px;
 }
 
+keyframes hello {
+    from, to { background-color: yellow; }
+    33% { background-color: green; }
+    66% { background-color: blue; }
+}
+
+#shadow{
+    margin: 0px auto;
+    width: 300px;
+    height: 30px;
+    border: 0px solid;
+    border-radius: 100px;
+    background-color: rgb(0,10,5,.85);
+    animation:hello 5s infinite;
+}
+ 
+
 #backpack {
-   margin: 10% 40%;
+   margin: 10% auto;
    display:block;
 }
 
@@ -91,4 +123,85 @@ margin: 20px 0px 0px 0px;
         margin: 175px auto;
 
     }
+    #bg1 {
+      /* Set rules to fill background */
+      min-height: 100%;
+      min-width: 1024px;
+      z-index: -2;
+      /* Set up proportionate scaling */
+      width: 100%;
+      height: 100%;	
+      /* Set up positioning */
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: block;
+    }
+    #bg2 {
+      /* Set rules to fill background */
+      min-height: 100%;
+      min-width: 1024px;
+      z-index: -2;
+      /* Set up proportionate scaling */
+      width: 100%;
+      height: 100%;	
+      /* Set up positioning */
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: none;
+    }
+    
+}
+.modelButton {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border: 2px solid;
+    border-radius: 10px;
+    border-color: limegreen;
+    background-color: rgb(0,35,15,.75);  
+   
+    
+}
+
+#m1 {
+    
+    margin-left: calc(50% + 130px);
+    margin-top: 65px;
+}
+#m2 {
+    
+    margin-left: calc(50% - 165px);
+    margin-top: 210px;
+}
+#m3 {
+    
+    margin-left: calc(50% + 200px);
+    margin-top: 200px;
+}
+#m1:hover {
+    
+    margin-left: calc(50% + 130px);
+    margin-top: 65px;
+    transition: all 0.5s ease-out;
+    background-color: limegreen;
+    width: 100px;
+    
+}
+#m2:hover {
+    
+    margin-left: calc(50% - 165px);
+    margin-top: 210px;
+    transition: all 0.5s ease-out;
+    background-color: limegreen;
+    width: 100px;
+}
+#m3:hover {
+    
+    margin-left: calc(50% + 200px);
+    margin-top: 200px;
+    transition: all 0.5s ease-out;
+    background-color: limegreen;
+    width: 100px;
 }
