--- a/studio2/styles.css
+++ b/studio2/styles.css
@@ -71,7 +71,7 @@ footer{
 margin: 20px 0px 0px 0px;
 }
 
-keyframes hello {
+@keyframes example {
     from, to { background-color: yellow; }
     33% { background-color: green; }
     66% { background-color: blue; }
@@ -84,7 +84,9 @@ keyframes hello {
     border: 0px solid;
     border-radius: 100px;
     background-color: rgb(0,10,5,.85);
-    animation:hello 5s infinite;
+      animation-name: example;
+      animation-duration: 4s;
+      animation-iteration-count: infinite;
 }
  
 
