--- a/final/style.css
+++ b/final/style.css
@@ -1,94 +1,202 @@
+
 html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
   font-family:Helvetica;
   font-size:85%;
-  overflow:hidden;
+  background-color: white;
 }
 
 nav li:hover {
-  background-color:lightgray;
   color: white;
+  cursor: pointer;
   
   
 }
+
+#p1:hover{
+ color: white;  
+}
+#p2:hover{
+ color: #B658A2;  
+}
+#p3:hover{
+ color: #F4A42E;  
+}
+#p4:hover{
+ color: #60C8D3;  
+}
+#p5:hover{
+ color: white;  
+}
+#header{
+        margin: 6.5em 14%;
+    width: 80%;
+}
 nav{
-        font-size:1.5em;
+    font-size:1.5em;
     width: 200px;
     top:0px;
-    padding-top: 5em;
-    padding-bottom: 2.5em;
+    padding-top: .05em;
     position: fixed;
     width: 100%;
     border:0;
     box-shadow: 10px 0px 50px 0px;
     list-style:none;
     margin:0 auto;
-    padding:0;
     text-align:center;
     transition: all 2s;
-    background-color: darkgrey;
+    background-color:green;
+    opacity: 1;
 
-
+}
+@keyframes box-shadow {
+  0% {
+    box-shadow: 5px 0px 10px black;
+  }
+  25% {
+    box-shadow: 5px 0px 35px black;
+  }
+  
+  75% {
+    box-shadow: 5px 0px 35px black;
+  }
+  100% {
+    box-shadow: 5px 0px 10px black;
+  }
+}
+#text{
+    
+    color: darkgreen;
+    position: relative;
+    width: 27%;
+    height: 6%;
+    padding: 20px;
+    border-radius: 25px;
+    border: 0px solid;
+    left: 60%;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 2.75em;
+    box-shadow: 0px 0px 0px black;
+    text-align: center;
+    background-color: rgb(175,220,175,.85);
+    display:block;
+    margin-top: -25px;
+    margin-bottom: 50px;
+    animation: box-shadow 2.5s infinite;
+}
+#text:hover{
+    position: relative;
+    width: 27%;
+    height: 6%;
+    padding: 20px;
+    color: white;
+    border-radius: 25px;
+    border: 0px solid;
+    left: 60%;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 2.75em;
+    box-shadow: 0px 0px 0px black;
+    text-align: center;
+    background-color: darkgreen;
+    opacity: .75;
+    display:block;
+    margin-top: -25px;
+    margin-bottom: 50px;
+    animation: box-shadow 2.5s infinite;
 }
 
 nav a{
     display:inline-block;
-    padding:10px;
+    padding:3px;
 }
 
 nav li{
     display:inline;
-    margin-right: 75px;
-    padding: 23px;
+    margin-right: .75em;
+    padding: 15px;
 }
 .page {
   /* setting height 100% for html, body, and for all pages makes each page full viewport */
-  height: 100%;
+    
+  width: 100%;
+  height: 400px;
   /* dirty hack to make text big and centered */
+  background-color: grey;
   text-align: center;
   font-size: 50pt;
   color:#333;
   display: none; 
-  margin-top: 50px;    
-  
-
+  border: 0px;
+  margin-top: 150px;
+  border-radius: 15px;
+  margin-bottom: 75px;
+  opacity: .65;
+  z-index:10;
+  opacity: .50;  
+transition: all 2s;
 }
 
+h2{
+    padding-top: 5.15em;
+    margin-right: .25em;
+    text-align: right;
+    font-size: 47pt;
+    
+} 
 
- 
+section{
+    background-color: darkgrey;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    margin-bottom: 40px;
+    width: 80%;
+    text-align: left;
+    font-size: 20pt;
+    color: black;
+    opacity: .75;
+    z-index: 10;
+}
+section:hover{
+    opacity: 1;
+}
 #page1 {
-  background-color:grey;
 
 }
 
 #page2 {
-  background-color:grey;
 }
 
 #page3 {
-  background-color:grey;
 }
 
 #page4 {
-  background-color:grey;
 }
 
 #page5 {
-  background-color:grey;
+}
+footer a{
+    color: black;
+    text-decoration: none;
+}
+footer a:hover{
+    color: white;
 }
 footer{
   padding: 15px;
   position: fixed;
+    opacity: 1;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: lightcyan;
+  background-color: darkgreen;
   color: black;
   text-align: center;
-margin: 20px 0px 0px 0px;
-        box-shadow: 10px 0px 50px 0px;
+  margin: 20px 0px 0px 0px;
+  box-shadow: 10px 0px 50px 0px;
+  transition: all 2s;
 
 }
