--- a/final/style.css
+++ b/final/style.css
@@ -139,13 +139,17 @@ transition: all 2s;
 }
 
 h2{
-    padding-top: 5.15em;
+    padding-top: .1em;
     margin-right: .25em;
     text-align: right;
-    font-size: 47pt;
     
 } 
-
+p{
+    text-align: left;
+    font-size: .75em;
+    padding-top: 1em;
+    padding-left: .5em;
+}
 section{
     background-color: darkgrey;
     border-radius: 20px;
@@ -159,10 +163,49 @@ section{
     color: black;
     opacity: .75;
     z-index: 10;
+    cursor: pointer;
     
 }
 section:hover{
     opacity: 1;
+}
+#rect1 {
+    width: 100%;
+    height: 8.5em;
+    background-color: green;
+    opacity: .25;
+    text-align: center;
+}
+#rect2 {
+    width: 100%;
+    height: 8.5em;
+    background-color: #B658A2;
+    opacity: .25;
+    text-align: center;
+}
+#rect3 {
+    width: 100%;
+    height: 8.5em;
+    background-color: #F4A42E;
+    opacity: .25;
+    text-align: center;
+}
+#rect4 {
+    width: 100%;
+    height: 8.5em;
+    background-color: #60C8D3;
+    opacity: .25;
+    text-align: center;
+}
+h1{
+    padding: 15px;
+    font-size: 5em;
+}
+article:hover{
+    opacity:1;
+}
+article{
+    opacity:.75;
 }
 #page1 {
 
