--- a/final/create/drama/style.css
+++ b/final/create/drama/style.css
@@ -60,14 +60,15 @@ h1{
 }
 article{
     position: absolute;
-    width: 35%;
-    height: auto;
+    width: 80%;
+    height: 45em;
     padding: 20px;
+    margin-bottom: 5em;
     color: deepskyblue;
     border-radius: 25px;
     border: 0px solid;
     top: 32.25%;
-    left: 35%;
+    left: 10%;
     font-family: 'Source Code Pro', monospace;
     font-size: 2.75em;
     box-shadow: 0px 0px 0px black;
@@ -77,16 +78,16 @@ article{
     animation: box-shadow 2.5s infinite;
 }
 article:hover{
-    cursor: pointer;
     position: absolute;
-    width: 35%;
-    height: auto;
+    width: 80%;
+    height: 45em;
     padding: 20px;
+    margin-bottom: 5em;
     color: white;
     border-radius: 25px;
     border: 0px solid;
     top: 32.25%;
-    left: 35%;
+    left: 10%;
     font-family: 'Source Code Pro', monospace;
     font-size: 2.75em;
     box-shadow: 0px 0px 0px black;
@@ -186,6 +187,17 @@ section > section{
 .notes{
     display: block;
 }
+form{
+    text-align: left;
+    font-size: 14px;
+    display:block;
+}
+input[type=text]{
+
+    height: 17em;
+    width: 99%;
+    text-align: left;
+}
 @media only screen and (min-width: 769px) {
 /*   background: url(image/Background_desktop.png) no-repeat;*/
     
@@ -262,12 +274,12 @@ p{
     position: relative;
     width: 15%;
     height: auto;
-    margin-top: 24.5em;
+    margin-top: 5.75em;
     padding: 20px;
     color: deepskyblue;
     border-radius: 25px;
     border: 1px solid;
-    left: 45%;
+    left: 43%;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
     box-shadow: 0px 0px 0px black;
@@ -322,7 +334,7 @@ p{
     color: deepskyblue;
     border-radius: 25px;
     border: 1px solid;
-    left: 40%;
+    left: 50%;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
     box-shadow: 0px 0px 0px black;
