--- a/final/create/drama/style.css
+++ b/final/create/drama/style.css
@@ -60,15 +60,14 @@ h1{
 }
 article{
     position: absolute;
-    width: 80%;
-    height: 45em;
+    width: 35%;
+    height: auto;
     padding: 20px;
-    margin-bottom: 5em;
     color: deepskyblue;
     border-radius: 25px;
     border: 0px solid;
     top: 32.25%;
-    left: 10%;
+    left: 35%;
     font-family: 'Source Code Pro', monospace;
     font-size: 2.75em;
     box-shadow: 0px 0px 0px black;
@@ -78,16 +77,16 @@ article{
     animation: box-shadow 2.5s infinite;
 }
 article:hover{
+    cursor: pointer;
     position: absolute;
-    width: 80%;
-    height: 45em;
+    width: 35%;
+    height: auto;
     padding: 20px;
-    margin-bottom: 5em;
     color: white;
     border-radius: 25px;
     border: 0px solid;
     top: 32.25%;
-    left: 10%;
+    left: 35%;
     font-family: 'Source Code Pro', monospace;
     font-size: 2.75em;
     box-shadow: 0px 0px 0px black;
@@ -190,7 +189,7 @@ section > section{
 form{
     text-align: left;
     font-size: 14px;
-    display:block;
+    display:none;
 }
 input[type=text]{
 
@@ -274,12 +273,12 @@ p{
     position: relative;
     width: 15%;
     height: auto;
-    margin-top: 5.75em;
+    margin-top: 24.5em;
     padding: 20px;
     color: deepskyblue;
     border-radius: 25px;
     border: 1px solid;
-    left: 43%;
+    left: 45%;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
     box-shadow: 0px 0px 0px black;
