--- a/final/create/drama/style.css
+++ b/final/create/drama/style.css
@@ -142,6 +142,9 @@ section > section{
     display:inline-flex;
 
 }
+section{
+    display:none;
+}
 .note{   
     text-align: center;
     width: 15%;
@@ -190,12 +193,14 @@ form{
     text-align: left;
     font-size: 14px;
     display:none;
+    border: 0px dotted;
+
 }
 input[type=text]{
-
     height: 17em;
     width: 99%;
     text-align: left;
+    
 }
 @media only screen and (min-width: 769px) {
 /*   background: url(image/Background_desktop.png) no-repeat;*/
@@ -251,6 +256,9 @@ input[type=text]{
 }
 p{
     font-size: 15px;
+}
+#scriptMsg{
+    color: white;
 }
 #progress {
     font-size: 20pt;
@@ -309,12 +317,12 @@ p{
     position: relative;
     width: 15%;
     height: auto;
-    margin-top: 27em;
+    margin-top: 123em;
     padding: 20px;
     color: deepskyblue;
     border-radius: 25px;
     border: 1px solid;
-    left: 10%;
+    left: 15%;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
     box-shadow: 0px 0px 0px black;
@@ -328,12 +336,12 @@ p{
    position: relative;
     width: 15%;
     height: auto;
-    margin-top: -3.85em;
+    margin-top:-3.75em;
     padding: 20px;
     color: deepskyblue;
     border-radius: 25px;
     border: 1px solid;
-    left: 50%;
+    left: 42.75%;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
     box-shadow: 0px 0px 0px black;
@@ -344,7 +352,7 @@ p{
 #add:hover {
     cursor: pointer;
     position: relative;
-    margin-top: 27em;
+    margin-top: 123em;
     width: 15%;
     height: auto;
     padding: 20px;
@@ -352,7 +360,7 @@ p{
     border-radius: 25px;
     border: 1px solid white;
     top: 55%;
-    left: 10%;
+    left: 15%;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
     text-align: center;
@@ -398,7 +406,7 @@ p{
 #finish:hover {
     cursor: pointer;
     position: relative;
-    margin-top: -3.85em;
+    margin-top: -3.75em;
     width: 15%;
     height: auto;
     padding: 20px;
@@ -406,10 +414,13 @@ p{
     border-radius: 25px;
     border: 1px solid white;
     top: 55%;
-    left: 40%;
+    left: 42.75%;;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
     text-align: center;
     background-color: deepskyblue;
     display:none;
+}
+#scriptSection {
+    z-index:-2;
 }
