small additions still not done

--- a/final/style.css
+++ b/final/style.css
@@ -204,7 +204,7 @@ article:hover{
     opacity:1;
 }
 article{
-    
+    cursor:pointer;
     opacity:.75;
 }
 #page1 {
@@ -215,6 +215,13 @@ article{
 }
 
 #page3 {
+    border-radius: 1000px;
+  border: 8.5px solid #F4A42E;
+  padding: 20px; 
+  width: 370px;
+  height: 350px; 
+  margin: 2.5em auto 0;
+  background-color:white;
 }
 
 #page4 {
@@ -278,4 +285,15 @@ footer{
   height: 175px; 
   margin: .87em auto;
   background-color:#60C8D3;
+}
+
+#page3big {
+border-radius: 1000px;
+  border: 8.5px solid #F4A42E;
+  padding: 20px; 
+  width: 500px;
+  height: 500px; 
+  margin: 2.5em auto 0;
+  background-color:;
+    
 }
